test/expected/declare_en_al4.out
declare x as enum E aligned 4
        ^
9: error: enum, struct, or union can not be aligned in C
